--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </section>
         <!-- footer -->
         <footer>
-            <p>&copy; My Portfolio Website 2023, All Right Reserved to &reg; Hiba Mol </p>
+            <p>&copy; My Portfolio Website 2023, All Right Reserved to &reg; Hiba Mol c </p>
             <div class="icon up-arrow">
                 <a href="#container" ><i class="fa-solid fa-angle-up brand"></i></a>
             </div>
